--- a/ui/typewriter-new.ui
+++ b/ui/typewriter-new.ui
@@ -35,10 +35,12 @@
 
 #leftMenuContainer {
 	background-color: #181825;
+	color: #cdd6f4;
 }
 
 #mainBodyContainer {
 	background-color: #313244;
+	color: #cdd6f4;
 }
 
 #fontMetrics {
@@ -51,7 +53,16 @@
 
 #statusFrame {
 	background-color: #1e1e2e;
-}</string>
+}
+
+QLabel {
+	color: #cdd6f4;
+}
+
+QPushButton {
+	color: #cdd6f4;
+}
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="minimumSize">
@@ -161,7 +172,7 @@
             <property name="frameShadow">
              <enum>QFrame::Raised</enum>
             </property>
-            <layout class="QVBoxLayout" name="verticalLayout_3">
+            <layout class="QHBoxLayout" name="horizontalLayout_5">
              <property name="spacing">
               <number>0</number>
              </property>
@@ -177,6 +188,23 @@
              <property name="bottomMargin">
               <number>10</number>
              </property>
+             <item alignment="Qt::AlignTop">
+              <widget class="QPushButton" name="pushButton">
+               <property name="text">
+                <string>Upload font</string>
+               </property>
+               <property name="icon">
+                <iconset resource="resources.qrc">
+                 <normaloff>:/icons/icons/upload.png</normaloff>:/icons/icons/upload.png</iconset>
+               </property>
+               <property name="iconSize">
+                <size>
+                 <width>24</width>
+                 <height>24</height>
+                </size>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
@@ -356,56 +384,12 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QFrame" name="fontMetrics">
-            <property name="minimumSize">
-             <size>
-              <width>130</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>130</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="frameShape">
-             <enum>QFrame::NoFrame</enum>
-            </property>
-            <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
-            </property>
-            <layout class="QVBoxLayout" name="verticalLayout_5">
-             <item>
-              <widget class="QFrame" name="frame_3">
-               <property name="frameShape">
-                <enum>QFrame::StyledPanel</enum>
-               </property>
-               <property name="frameShadow">
-                <enum>QFrame::Raised</enum>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QFrame" name="frame">
-               <property name="frameShape">
-                <enum>QFrame::StyledPanel</enum>
-               </property>
-               <property name="frameShadow">
-                <enum>QFrame::Raised</enum>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item>
            <widget class="QFrame" name="frame_2">
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
             </property>
             <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
+             <enum>QFrame::Plain</enum>
             </property>
            </widget>
           </item>
