have timer working with font loader

--- a/ui/splash_screen.ui
+++ b/ui/splash_screen.ui
@@ -118,6 +118,9 @@
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
               <layout class="QGridLayout" name="gridLayout">
+               <property name="topMargin">
+                <number>25</number>
+               </property>
                <item row="2" column="0">
                 <widget class="QFrame" name="fontFrame">
                  <property name="frameShape">
